--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@types/react": "^18.2.61",
     "@types/three": "^0.162.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.1.2",
+    "eslint-config-next": "^15.0.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
